--- a/frontend/src/pages/login.css
+++ b/frontend/src/pages/login.css
@@ -13,5 +13,49 @@ body
 
 #login-box
 {
-    
+    display: flex;
+    flex-flow: column nowrap;
+
+    align-items: center;
+
+    padding: 5vh;
+
+    background-color: #ede7b1;
+    border-radius: 10px;
+}
+
+#id-field-box
+{
+    display: flex;
+    flex-flow: column nowrap;
+
+    align-items: center;
+    padding-bottom: 5vh;
+}
+
+#id-field-box *
+{
+    margin: 0;
+}
+
+#fields
+{
+    margin-bottom: 8vh;
+}
+
+
+#test
+{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+}
+
+.inline-bar
+{
+    flex-grow: 1;
+
+    height: 1px;
+    min-width: 20px;
+    background-color: dimgrey;
 }
