--- a/frontend/src/styles/detailpost.css
+++ b/frontend/src/styles/detailpost.css
@@ -6,7 +6,12 @@ body {
     background-repeat: no-repeat; 
     height: 100vh; 
     margin: 0; 
-    }
+
+    display: grid;
+    grid-template-columns: (3,1fr);
+    gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+}
 
 #premierPost {
 
@@ -112,6 +117,26 @@ body {
     justify-content: space-between; /* Espace entre le titre et le profil */
 
     padding-left: 15px;
+
+    grid-column: 1/3;
+    grid-row: 1;
+}
+
+#posterOriginalProfil{
+    
+    margin-left: 15px;
+    margin-right: 15px;
+    background-color: lightslategray;
+    border-radius: 15px;
+    
+
+    grid-column: 1/2;
+    grid-row: 2/2;
+}
+
+#zonePostDetaille{
+    grid-column: 2/2;
+    grid-row: 2/2;
 }
 
 #titreComplet {
