--- a/frontend/src/styles/detailpost.css
+++ b/frontend/src/styles/detailpost.css
@@ -25,7 +25,7 @@ body {
 }
 
 
-#photoProfil {
+.photoPosteur {
     width: 100px; 
     height: 100px; 
     border-radius: 50%; 
@@ -127,10 +127,11 @@ body {
     margin-left: 15px;
     margin-right: 15px;
     border: 2px solid rgb(0, 0, 0);
-    height: 2000px;
+    height: fit-content;
     padding: 15px;
     padding-top: 20px;
     border-radius: 15px;
+    width: 20vw;
 
 
     grid-column: 1/2;
@@ -146,6 +147,7 @@ body {
     padding: 15px;
     padding-top: 20px;
     border-radius: 15px;
+    width: 60vw;
 
     grid-column: 2/2;
     grid-row: 2/2;
