--- a/frontend/src/styles/detailpost.css
+++ b/frontend/src/styles/detailpost.css
@@ -13,15 +13,18 @@ body {
     grid-auto-rows: minmax(100px, auto);
 }
 
-#premierPost {
+.post {
 
     background-color:#f694C1;
     width: 500px;
     height: fit-content;
     padding: 5px;
+    padding-bottom: 0.5vh;
     border: 1px solid rgb(226, 85, 198);
     border-radius: 15px;
     font-size: 20px;
+
+    gap: 25px;
 }
 
 
@@ -143,11 +146,14 @@ body {
     margin-left: 15px;
     margin-right: 15px;
     border: 2px solid rgb(0, 0, 0);
-    height: 2000px;
+    height: fit-content;
     padding: 15px;
     padding-top: 20px;
+    padding-bottom: 10vh;
     border-radius: 15px;
     width: 60vw;
+
+    display: grid;
 
     grid-column: 2/2;
     grid-row: 2/2;
